keep the socket open